[workspace]
members = [
  # Common traits and types
  "rlay-backend",
  "rlay-resolve",
  # Backends
  "rlay-backend-ethereum",
  "rlay-backend-neo4j",
  "rlay-backend-redis",
  # Binaries
  "rlay-client",
  # Other
  "rlay-payout",
  "rlay-jsonrpc-client",
]

[patch.crates-io]
ethabi = { git = "https://github.com/hobofan/ethabi", rev = '42df1ca0ac5976040b9091f35875b9548c30ef41' }
