[workspace]
members = [
  # Common traits and types
  "rlay-backend",
  "rlay-plugin-interface",
  # Backends
  "rlay-backend-neo4j",
  "rlay-backend-redisgraph",
  # Binaries
  "rlay-client",
  # Other
  "rlay-jsonrpc-client",
  # Examples
  "example-filter-plugin",
]

[patch.crates-io]
# Last dependency with 0.x syn dependency; See https://github.com/mcarton/rust-derivative/pull/50
derivative = { git = "https://github.com/jakobhellermann/rust-derivative", rev = '89873bf622657d3d59ebc2b7abfea0dbecbd2d11' }
