[package]
name = "rlay-backend-ethereum"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend" }

cid = { git = 'https://github.com/hobofan/rust-cid', rev = '87332277d2cdb5b7cb6484c23b5711c28b44c684' }
ethabi = { git = "https://github.com/hobofan/ethabi", rev = '42df1ca0ac5976040b9091f35875b9548c30ef41' }
failure = "=0.1.1"
failure_derive = "=0.1.1"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
futures01 = { package = "futures", version = "0.1.28" }
log = "0.4.6"
multibase = "0.6.0"
rlay_ontology = { git = 'https://github.com/rlay-project/rlay-ontology', rev = 'd02a9f3781381f5d19236144a19a2a6f8ed71319', features = ["web3_compat"] }
rustc-hex = "1.0.0"
serde = "=1.0.79"
serde_derive = "=1.0.79"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
tokio-core = "0.1.17"
url = "1.7.1"
web3 = "0.6.0"

[features]
default = ["transport_ws"]
transport_ipc = []
transport_ws = []
