[package]
name = "rlay-backend-neo4j"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend" }

bb8_cypher = { git = "https://github.com/hobofan/bb8-cypher", rev = '548efa44b0aacf617ba386182d674274d5ca4a09' }
l337 = { git = "https://github.com/OneSignal/L3-37", rev = "a970fe669787c4caf8ae699870b97ed1d7616f00" }
rusted_cypher = { git = "https://github.com/hobofan/rusted-cypher", rev = '61829fe43395c7c78be835b0045222a906f184f4' }
cid = { package = "cid_fork_rlay", version = "0.3.1" }
failure = "0.1.1"
futures = "0.3.0"
log = "0.4.6"
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
rustc-hex = "1.0.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
tokio = "0.2.0"
err-ctx = "0.2.3"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", rev = "b6f9dbe82478f28f5c5b46686bcc4dfe422fd9ea" }
nonparallel = "0.1.0"
lazy_static = "1.4.0"
env_logger = "0.6.2"
