[package]
name = "rlay-backend-redisgraph"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend" }

cid = { package = "cid_fork_rlay", version = "0.3.1" }
failure = "0.1.5"
futures = { version = "0.3.0" }
log = "0.4.6"
redis = { version = "0.14.0", features = ["tokio-rt-core"] }
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
rustc-hex = "1.0.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
itertools = "0.8.0"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", rev = "b6f9dbe82478f28f5c5b46686bcc4dfe422fd9ea" }
env_logger = "0.6.2"
tokio = "0.2.0"
