[package]
name = "rlay-backend"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cid = { git = 'https://github.com/hobofan/rust-cid', rev = '87332277d2cdb5b7cb6484c23b5711c28b44c684' }
rlay_ontology = { git = 'https://github.com/rlay-project/rlay-ontology', rev = '568f182b8b83584978784c01545140dfb55f86e9', features = ["web3_compat"] }
failure = "=0.1.1"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
futures-preview = "=0.3.0-alpha.17"
