[package]
name = "rlay-backend"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cid = { package = "cid_fork_rlay", version = "0.3.1" }
rlay_ontology = { version = "0.2.5", features = ["web3_compat"] }
failure = "0.1.1"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
futures-preview = "0.3.0-alpha.17"
