[package]
name = "rlay-client"
version = "0.2.7"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend" }
rlay-backend-neo4j = { path = "../rlay-backend-neo4j", optional = true }
rlay-backend-ethereum = { path = "../rlay-backend-ethereum" }

web3 = "0.6.0"
cid = { git = 'https://github.com/hobofan/rust-cid', rev = '87332277d2cdb5b7cb6484c23b5711c28b44c684' }
rlay_ontology = { git = 'https://github.com/rlay-project/rlay-ontology', rev = 'd02a9f3781381f5d19236144a19a2a6f8ed71319', features = ["web3_compat"] }
merkle_light = { git = "https://github.com/hobofan/merkle_light", rev = 'f069616df909cb7a4426f6deb328bde6422a3510' }
ethabi = { git = "https://github.com/hobofan/ethabi", rev = '42df1ca0ac5976040b9091f35875b9548c30ef41' }
rustc-hex = "1.0.0"
tokio-core = "0.1.17"
clap = "2.31"
console = "0.6.1"
failure = "=0.1.1"
serde = "=1.0.79"
toml = "0.4.6"
serde_derive = "=1.0.79"
futures-timer = "0.1.1"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
log = "0.4.6"
env_logger = "0.5.10"
tiny-keccak = "1.4.2"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
jsonrpc-core = "10.1.0"
jsonrpc-pubsub = "10.1.0"
jsonrpc-http-server = "10.1.0"
jsonrpc-ws-server = "10.1.0"
hyper = "0.12.25"
url = "1.7.1"
failure_derive = "=0.1.1"
dialoguer = "0.1.0"
hlua = "0.4.1"
toml_edit = "0.1.3"

[dev-dependencies]
assert_cmd = "0.10.2"

[features]
default = ["transport_ws"]
transport_ipc = ["rlay-backend-ethereum/transport_ipc"]
transport_ws = ["rlay-backend-ethereum/transport_ws"]
backend_neo4j = ["rlay-backend-neo4j"]
