[package]
name = "rlay-client"
version = "0.2.7"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend", features = ["rpc"] }
rlay-backend-neo4j = { path = "../rlay-backend-neo4j", optional = true }
rlay-backend-redisgraph = { path = "../rlay-backend-redisgraph", optional = true }

cid = { package = "cid_fork_rlay", version = "0.3.1" }
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
rustc-hex = "1.0.0"
clap = "2.31"
failure = "0.1.1"
serde = "1.0.79"
toml = "0.4.6"
serde_derive = "1.0.79"
futures = "0.3.0"
log = "0.4.6"
env_logger = "0.5.10"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
jsonrpc-core = "13.0.0"
hyper = "0.13.0"
tokio = "0.2.0"
url = "1.7.1"
failure_derive = "0.1.1"
dialoguer = "0.1.0"
hlua = "0.4.1"
static_assertions = "1.1.0"
ambassador = "0.2.1"

[dev-dependencies]
assert_cmd = "0.11"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", rev = "b6f9dbe82478f28f5c5b46686bcc4dfe422fd9ea" }
rlay-jsonrpc-client = { path = "../rlay-jsonrpc-client" }
tokio = { version = "0.2.0" }
tempfile = "3.1"
rand = "0.7"

[features]
default = ["transport_ws", "backend_neo4j", "backend_redisgraph"]
transport_ipc = []
transport_ws = []
backend_neo4j = ["rlay-backend-neo4j"]
backend_redisgraph = ["rlay-backend-redisgraph"]
