[package]
name = "rlay-jsonrpc-client"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-resolve = { path = "../rlay-resolve" }

futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
hyper = { git = "https://github.com/hyperium/hyper", rev = "4920f5e264c57f87dc8b91e7ed9a575359cc093c" }
log = "0.4.6"
rlay_ontology = { version = "0.2.3", features = ["web3_compat"] }
serde = "1.0.79"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
