[package]
name = "rlay-jsonrpc-client"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend" }

futures = "0.3.0"
hyper = "0.13.0"
log = "0.4.6"
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
serde = "1.0.79"
serde_json = { version = "1.0.22", features = ["preserve_order"] }
