[package]
name = "rlay-plugin-interface"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlay-backend = { path = "../rlay-backend" }

ambassador = "0.2.1"
serde_json = "1"
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
