[package]
name = "rlay-plugin-interface"
description = "Common interface for writing rlay-client plugins"
version = "0.3.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay-backend = { path = "../rlay-backend", version = "0.3.0" }

ambassador = "0.2.1"
async-trait = "0.1.24"
serde_json = "1"
rlay_ontology = { version = "0.2.6", features = ["web3_compat"] }
