[package]
name = "rlay-resolve"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rlay_ontology = { git = 'https://github.com/rlay-project/rlay-ontology', rev = '568f182b8b83584978784c01545140dfb55f86e9', features = ["web3_compat"] }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
